Add date time component

--- a/manage-tool/libs/ui/src/lib/header/header.component.scss
+++ b/manage-tool/libs/ui/src/lib/header/header.component.scss
@@ -1,5 +1,7 @@
-.header {
+:host {
+  display: grid;
+  grid-template-columns: auto 1fr auto;
   background-color: lightseagreen;
   padding: 20px;
-  text-align: center;
+  align-items: center;
 }
