--- a/manage-tool/apps/daily/src/app/app.component.html
+++ b/manage-tool/apps/daily/src/app/app.component.html
@@ -1,3 +1,5 @@
-<manage-tool-header> </manage-tool-header>
-<div></div>
-<manage-tool-footer></manage-tool-footer>
+<div class="basic" [class.dark-theme]="isDarkTheme">
+  <manage-tool-header></manage-tool-header>
+  <div></div>
+  <manage-tool-footer></manage-tool-footer>
+</div>
