--- a/manage-tool/libs/ui/src/lib/footer/footer.component.scss
+++ b/manage-tool/libs/ui/src/lib/footer/footer.component.scss
@@ -1,5 +1,4 @@
 .footer {
-  background-color: lightseagreen;
-  padding: 5px;
-  // text-align: center;
+  padding: 2px;
+  background-color: var(--background);
 }
