Fix directory and add datk theme to local storage

--- a/libs/ui/src/lib/header/header.component.html
+++ b/libs/ui/src/lib/header/header.component.html
@@ -3,7 +3,10 @@
     <span>Daily</span>
     <span></span>
     <span>
-      <mat-slide-toggle (change)="changeTheme()"></mat-slide-toggle>
+      <mat-slide-toggle
+        [checked]="isDarkTheme"
+        (change)="changeTheme()"
+      ></mat-slide-toggle>
     </span>
     <span>
       <manage-tool-date-time></manage-tool-date-time>
