Add login and fix date-time

--- a/apps/daily/src/app/app.component.html
+++ b/apps/daily/src/app/app.component.html
@@ -1,5 +1,5 @@
 <div class="basic" [class.dark-theme]="isDarkTheme">
   <manage-tool-header></manage-tool-header>
-  <div></div>
+  <manage-tool-login></manage-tool-login>
   <manage-tool-footer></manage-tool-footer>
 </div>
