--- a/libs/ui/src/lib/date-time/date-time.component.html
+++ b/libs/ui/src/lib/date-time/date-time.component.html
@@ -1,4 +1,4 @@
 <div class="date-time">
-  <span>{{ dateTime | date: 'H:mm' }}</span>
-  <span>{{ dateTime | date: 'd/M/yy' }}</span>
+  <span>{{ dateTime | async | date: 'H:mm' }}</span>
+  <span>{{ dateTime | async | date: 'd/M/yy' }}</span>
 </div>
