Add router and login service

--- a/apps/daily/src/app/app.component.html
+++ b/apps/daily/src/app/app.component.html
@@ -1,5 +1,5 @@
 <div class="basic" [class.dark-theme]="isDarkTheme">
   <manage-tool-header></manage-tool-header>
-  <manage-tool-login></manage-tool-login>
+  <router-outlet></router-outlet>
   <manage-tool-footer></manage-tool-footer>
 </div>
