--- a/apps/daily/src/app/login/login.component.html
+++ b/apps/daily/src/app/login/login.component.html
@@ -34,6 +34,17 @@
           />
         </mat-form-field>
         <mat-form-field>
+          <mat-label>Sprint number</mat-label>
+          <mat-select formControlName="sprintNumber">
+            <mat-option
+              *ngFor="let sprintNumberValue of sprintNumbers"
+              [value]="sprintNumberValue"
+            >
+              {{ sprintNumberValue }}
+            </mat-option>
+          </mat-select>
+        </mat-form-field>
+        <mat-form-field>
           <mat-label>Quarter</mat-label>
           <mat-select formControlName="quarter">
             <mat-option
