--- a/apps/daily/src/app/dashboard/dashboard.component.html
+++ b/apps/daily/src/app/dashboard/dashboard.component.html
@@ -1,1 +1,8 @@
-<p>dashboard works!</p>
+<div class="dashboard">
+  <div>dashboard</div>
+  <div class="options">
+    <button mat-fab color="primary" (click)="openAddMemberDialog()">
+      <mat-icon>add</mat-icon>
+    </button>
+  </div>
+</div>
