--- a/apps/daily/src/app/dashboard/dashboard.component.scss
+++ b/apps/daily/src/app/dashboard/dashboard.component.scss
@@ -4,12 +4,12 @@
 
 .dashboard {
   display: grid;
-  grid-template-rows: 1fr auto;
+  grid-template-columns: 1fr auto;
 }
 
 .options {
   display: flex;
-  place-content: flex-end;
+  align-items: flex-end;
   margin: 10px;
 }
 
