--- a/apps/daily/src/app/dashboard/dashboard.component.html
+++ b/apps/daily/src/app/dashboard/dashboard.component.html
@@ -7,7 +7,7 @@
     ></manage-tool-team-member-card>
   </div>
   <div class="options">
-    <button mat-mini-fab color="primary" (click)="openAddMemberDialog()">
+    <button mat-mini-fab color="accent" (click)="openAddMemberDialog()">
       <mat-icon>add</mat-icon>
     </button>
   </div>
