--- a/apps/daily/src/assets/_color.scss
+++ b/apps/daily/src/assets/_color.scss
@@ -1,9 +1,11 @@
 :root {
-  --background: #3f51b5;
+  --background: #283593;
   --foreground: white;
+  --body-background: #f3f4f6;
 }
 
 .dark-theme {
-  --background: #4caf50;
-  --foreground: black;
+  --background: #283593;
+  --foreground: white;
+  --body-background: #2c2c2c;
 }
