--- a/apps/daily/src/app/add-member-dialog/add-member-dialog.component.html
+++ b/apps/daily/src/app/add-member-dialog/add-member-dialog.component.html
@@ -1,15 +1,15 @@
 <span mat-mat-dialog-title>Add team member</span>
 <mat-dialog-content>
-  <mat-form-field>
+  <mat-form-field color="accent">
     <input matInput placeholder="Name" [formControl]="name" />
   </mat-form-field>
 </mat-dialog-content>
 <mat-dialog-actions class="actions">
-  <button mat-button mat-dialog-close color="primary">Cancel</button>
+  <button mat-button mat-dialog-close color="accent">Cancel</button>
   <button
     mat-raised-button
     mat-dialog-close
-    color="primary"
+    color="accent"
     (click)="addTeamMember()"
     [disabled]="!name.valid"
   >
