--- a/libs/ui/src/lib/header/header.component.scss
+++ b/libs/ui/src/lib/header/header.component.scss
@@ -16,8 +16,23 @@
 
 .team-name {
   text-align: right;
+  font-size: 36pt;
+  margin-top: 5px;
+}
+
+.sprint-data {
+  font-size: 14pt;
+  margin: 14px 0px 0px 10px;
+}
+
+.date {
+  margin-right: 5px;
 }
 
 .settings {
   height: 25px;
+}
+
+.logo {
+  height: 55px;
 }
