Init settings dialog component

--- a/libs/ui/src/lib/header/header.component.html
+++ b/libs/ui/src/lib/header/header.component.html
@@ -14,8 +14,10 @@
         </span>
       </span>
     </div>
-    <span class="settings">
-      <mat-icon>settings</mat-icon>
+    <span>
+      <button mat-icon-button (click)="openSettingsDialog()">
+        <mat-icon>settings</mat-icon>
+      </button>
     </span>
     <span>
       <mat-slide-toggle
