Add settings dialog

--- a/apps/daily/src/app/login/login.component.html
+++ b/apps/daily/src/app/login/login.component.html
@@ -1,69 +1,3 @@
-<div class="login-div">
-  <form [formGroup]="loginForm" (ngSubmit)="onLogin()">
-    <mat-card class="login mat-elevation-z8">
-      <mat-card-title> Login </mat-card-title>
-      <mat-card-content>
-        <mat-form-field color="accent">
-          <input matInput placeholder="Team" formControlName="teamName" />
-        </mat-form-field>
-        <mat-form-field color="accent">
-          <mat-label>Sprint dates</mat-label>
-          <mat-date-range-input [rangePicker]="picker">
-            <input
-              matStartDate
-              placeholder="Start date"
-              formControlName="startDate"
-            />
-            <input
-              matEndDate
-              placeholder="End date"
-              formControlName="endDate"
-            />
-          </mat-date-range-input>
-          <mat-datepicker-toggle
-            matSuffix
-            [for]="picker"
-          ></mat-datepicker-toggle>
-          <mat-date-range-picker #picker></mat-date-range-picker>
-        </mat-form-field>
-        <mat-form-field color="accent">
-          <input
-            matInput
-            placeholder="Sprint duration (days)"
-            formControlName="sprintDuration"
-          />
-        </mat-form-field>
-        <mat-form-field color="accent">
-          <mat-label>Sprint number</mat-label>
-          <mat-select formControlName="sprintNumber">
-            <mat-option
-              *ngFor="let sprintNumberValue of sprintNumbers"
-              [value]="sprintNumberValue"
-            >
-              {{ sprintNumberValue }}
-            </mat-option>
-          </mat-select>
-        </mat-form-field>
-        <mat-form-field color="accent">
-          <mat-label>Quarter</mat-label>
-          <mat-select formControlName="quarter">
-            <mat-option
-              *ngFor="let quarterValue of quarters"
-              [value]="quarterValue"
-            >
-              {{ quarterValue }}
-            </mat-option>
-          </mat-select>
-        </mat-form-field>
-        <button
-          mat-raised-button
-          color="accent"
-          type="submit"
-          [disabled]="!loginForm.valid"
-        >
-          login
-        </button>
-      </mat-card-content>
-    </mat-card>
-  </form>
-</div>
+<manage-tool-team-information
+  (teamSchedule)="login($event)"
+></manage-tool-team-information>
