--- a/apps/daily/src/app/app.component.html
+++ b/apps/daily/src/app/app.component.html
@@ -1,5 +1,8 @@
 <div class="basic" [class.dark-theme]="isDarkTheme">
-  <manage-tool-header [teamSchedule]="teamSchedule"></manage-tool-header>
+  <manage-tool-header
+    [teamSchedule]="teamSchedule"
+    (updateTeamSchedule)="updateTeamSchedule($event)"
+  ></manage-tool-header>
   <router-outlet></router-outlet>
   <manage-tool-footer></manage-tool-footer>
 </div>
