--- a/libs/ui/src/lib/header/header.component.html
+++ b/libs/ui/src/lib/header/header.component.html
@@ -1,6 +1,6 @@
 <mat-toolbar color="primary">
   <mat-toolbar-row class="header">
-    <img class="logo" src="../../assets/ui/daily.png" />
+    <img class="logo" src="assets/ui/daily.png" />
     <div>
       <span *ngIf="teamSchedule" class="login-data">
         <span class="team-name">{{ teamSchedule.teamName }}</span>
