--- a/libs/ui/src/lib/header/header.component.scss
+++ b/libs/ui/src/lib/header/header.component.scss
@@ -26,7 +26,7 @@
 }
 
 .date {
-  margin-right: 5px;
+  margin-right: 8px;
 }
 
 .mat-icon-button {
@@ -35,4 +35,8 @@
 
 .logo {
   height: 55px;
+}
+
+.schedule {
+  font-size: 12pt;
 }
