--- a/apps/daily/src/app/dashboard/dashboard.component.scss
+++ b/apps/daily/src/app/dashboard/dashboard.component.scss
@@ -1,5 +1,6 @@
 :host {
   display: grid;
+  overflow-y: auto;
 }
 
 .dashboard {
@@ -17,4 +18,5 @@
   display: flex;
   flex-wrap: wrap;
   margin: 10px;
+  height: fit-content;
 }
