--- a/libs/ui/src/lib/team-member-card/team-member-card.component.html
+++ b/libs/ui/src/lib/team-member-card/team-member-card.component.html
@@ -11,6 +11,7 @@
           type="text"
           placeholder="Add goal"
           [formControl]="goals.controls[i]"
+          (input)="valueChanges()"
       /></mat-form-field>
       <button
         class="icon"
