Fix team members style

--- a/apps/daily/src/app/dashboard/dashboard.component.scss
+++ b/apps/daily/src/app/dashboard/dashboard.component.scss
@@ -15,8 +15,8 @@
 }
 
 .team-members {
-  display: flex;
-  flex-wrap: wrap;
+  display: grid;
   margin: 10px;
+  grid-template-columns: 0.25fr 0.25fr 0.25fr 0.25fr;
   height: fit-content;
 }
